--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,6 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm install
-    npm run build
+    npm install –save-dev start-server-and-test
+    start-server-and-test start http://localhost:4200
   displayName: 'npm install and build'
