Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,6 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-    npm install –save-dev start-server-and-test
-    start-server-and-test start http://localhost:4200
+    npm install cypress --save-dev
+    cypress run
   displayName: 'npm install and build'
