--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,5 +17,5 @@ steps:
 
 - script: |
     npm install cypress --save-dev
-    npm cypress run
+    npx cypress run
   displayName: 'npm install and build'
