Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,10 @@ steps:
       path: /home/vsts/.cache/Cypress
       restoreKeys: cypress | $(Agent.OS) | package-lock.json
   displayName: Cache Cypress binary
+  
+# Install Node dependencies
+- script: npm ci
+  displayName: 'Install NPM dependencies'
 
 - script: npm run cy:verify
   displayName: 'Cypress Verify'
